--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Robotics Blog - Diego Prestamo
 description: Chasing robotics mastery one project at a time
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://png.pngtree.com/png-clipart/20200224/original/pngtree-cartoon-color-simple-male-avatar-png-image_5230557.jpg
+avatar: images/male_avatar.png
 
 #
 # Flags below are optional
