--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Robotics Blog - Diego Prestamo
 description: Chasing robotics mastery one project at a time
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/male_avatar.png
+avatar: https://png.pngtree.com/png-vector/20191101/ourmid/pngtree-cartoon-color-simple-male-avatar-png-image_1934459.jpg
 
 #
 # Flags below are optional
