--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Robotics Blog - Diego Prestamo
+name: Engineering Blog - Diego Prestamo
 
 # Short bio or description (displayed in the header)
-description: Chasing robotics mastery one project at a time
+description: Chasing engineering mastery one project at a time
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://png.pngtree.com/png-vector/20191101/ourmid/pngtree-cartoon-color-simple-male-avatar-png-image_1934459.jpg
